// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`BrNodeComponent > render > should render a mapped component 1`] = `
"<br-meta-stub>
  <suspense-stub>
    <something-stub component=\\"[object Object]\\" page=\\"[object Object]\\"></something-stub>
  </suspense-stub>
</br-meta-stub>"
`;

exports[`BrNodeComponent > render > should render children 1`] = `
"<br-meta-stub>
  <suspense-stub>
    <br-node-component-stub component=\\"[object Object]\\"></br-node-component-stub>
    <br-node-component-stub component=\\"[object Object]\\"></br-node-component-stub>
  </suspense-stub>
</br-meta-stub>"
`;
